added booking for students
